--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,4 +5,52 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
+    margin-bottom: -5.8px;
+}
+.copy-button{
+    width: 100px;
+    height: 30px;
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -15px;
+    text-align: center;
+    outline: none;
+    border: none;
+    background: rgba(255, 255, 255, .3);
+    font-size: 1rem;
+    line-height: 30px;
+    color: white;
+    text-transform: uppercase;
+    opacity: 0;
+    transition: opacity .3s ease-out;
+}
+.ColorBox:hover .copy-button{
+    opacity: 1;
+}
+.box-content{
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    bottom: 0;
+    padding: 10px;
+    color: black;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: .8rem;
+}
+.see-more{
+    background: rgba(255, 255, 255, .3);
+    position: absolute;
+    border: none;
+    right: 0px;
+    bottom: 0px;
+    color: white;
+    width: 60px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    text-transform: uppercase;
 }
