--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -48,9 +48,61 @@
     right: 0px;
     bottom: 0px;
     color: white;
+    font-size: 12px;
     width: 60px;
     height: 30px;
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
+}
+
+.copy-overlay{
+    opacity: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    transition: transform .6s ease-in-out;
+    transform: scale(.1);
+}
+.copy-overlay.show{
+    opacity: 1;
+    transform: scale(50);
+    position: absolute;
+    z-index: 10;
+}
+
+.copy-msg{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 4rem;
+    transform: scale(.1);
+    opacity: 0;
+    color: white;
+}
+.copy-msg.show{
+    opacity: 1;
+    transform: scale(1);
+    z-index: 25;
+    transition: all .4s ease-in-out .3s;
+}
+.copy-msg h1{
+    font-weight: 400;
+    text-shadow: 1px 2px black;
+    background: rgba(255, 255, 255, .2);
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.copy-msg p{
+    font-size: 2rem;
+    opacity: .6;
 }
