add navbar and move slider into it

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -18,3 +18,28 @@
     text-decoration: none;
     color: #000;
 }
+/* slider */
+.slider{
+    width: 340px;
+    margin: 0 10px;
+    display: inline-block;
+    padding: 0 5px;
+}
+.rc-slider-track{
+    background-color: transparent;
+}
+.rc-slider-rail{
+    height: 8px;
+}
+.rc-slider-handle,
+.rc-slider-handle:active,
+.rc-slider-handle:focus,
+.rc-slider-handle:hover{
+    background-color: green;
+    outline: none;
+    border: 2px solid green;
+    box-shadow: none;
+    width: 13px;
+    height: 13px;
+    margin-top: -3px;
+}
