--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -51,6 +51,12 @@
     text-transform: uppercase;
     font-size: .8rem;
 }
+.light-text{
+    color: white;
+}
+.ColorBox .dark-text{
+    color: rgb(0, 0, 0, .5);
+}
 .see-more{
     background: rgba(255, 255, 255, .3);
     position: absolute;
