--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox{
+/* .ColorBox{
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -9,7 +9,7 @@
 }
 .SingleColorPalette .ColorBox{
     height: 50%;
-}
+} */
 .ColorBox.go-back{
     background-color: black;
 }
@@ -34,13 +34,13 @@
     transition: opacity .3s ease-out;
     text-decoration: none;
 }
-.copy-button{
+/* .copy-button{
     opacity: 0;
 }
 .ColorBox:hover .copy-button{
     opacity: 1;
-}
-.box-content{
+} */
+/* .box-content{
     position: absolute;
     width: 100%;
     left: 0px;
@@ -50,8 +50,8 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: .8rem;
-}
-.light-text{
+} */
+/* .light-text{
     color: white;
 }
 .ColorBox .dark-text{
@@ -70,24 +70,24 @@
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
-}
+} */
 
-.copy-overlay{
+/* .copy-overlay{
     opacity: 0;
     z-index: -1;
     width: 100%;
     height: 100%;
     transition: transform .6s ease-in-out;
     transform: scale(.1);
-}
-.copy-overlay.show{
+} */
+/* .copy-overlay.show{
     opacity: 1;
     transform: scale(50);
     position: absolute;
     z-index: 10;
-}
+} */
 
-.copy-msg{
+/* .copy-msg{
     position: fixed;
     left: 0;
     right: 0;
@@ -101,14 +101,14 @@
     transform: scale(.1);
     opacity: 0;
     color: white;
-}
-.copy-msg.show{
+} */
+/* .copy-msg.show{
     opacity: 1;
     transform: scale(1);
     z-index: 25;
     transition: all .4s ease-in-out .3s;
-}
-.copy-msg h1{
+} */
+/* .copy-msg h1{
     font-weight: 400;
     text-shadow: 1px 2px black;
     background: rgba(255, 255, 255, .2);
@@ -117,8 +117,8 @@
     margin-bottom: 0;
     padding: 1rem;
     text-transform: uppercase;
-}
-.copy-msg p{
+} */
+/* .copy-msg p{
     font-size: 2rem;
     opacity: .6;
-}
+} */
